--- a/public/home.html
+++ b/public/home.html
@@ -1,5 +1,4 @@
-<div class="container" style="background-image: url(images/ftlbeach1a.jpg)">
-   <h1 class="display">We Are Code For Fort Lauderdale</h1>
-  <p class="lead">Come join idea-makers, designers, citizen leaders, developers, and data geeks who volunteer to help the Fort Lauderdale government and civic orgs adopt open web technologies. <br>
-  <a class="btn btn-primary btn-lg" href="http://www.meetup.com/Code-for-FTL/" role="button">Stop By Our Meetup</a>
+<div class="container" >
+   <h1 class="display"></h1>
+  <p class="lead"> Mostly work in php/mysql/javascript/jquery with frameworks such as Wordpress and Drupal. Enjoy a challenge. I have skills that range from C#, Java, Rust, Python, Erlang, and others. Docker / Linux is my enviroment and Kubernetes I am in the process of learning. 
   </p></div>
