--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,17 @@
   <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Code for Fort Lauderdale | A Code for America Brigade
+	<title>Michael Adler Web Software Developer 
 	</title>
 	<meta name="google-site-verification" content="mzzt_14vPhLb8c3C3qp-qAqSjDk_w368wxHtru2D4ZI" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-	content="Locals helping Fort Lauderdale open their data and create meaningful web and mobile apps">
-	<meta name="geo.position" content="26.07;-80.22" />
+	content="Fort Lauderdale local programming.">
 	<meta name="geo.placename" content="Fort Lauderdale, Florida, USA" />
 	<meta name="geo.region" content="US-FL" />
-	<meta property="og:title" content="Code for Fort Lauderdale" />
-	<meta name="twitter:url" content="http://www.twitter.com/CodeforFTL/" />
-	<meta name="twitter:site" value="@codeforftl" />
+	<meta property="og:title" content="Michael Adler Web Programmer - Software" />
+	<meta name="twitter:url" content="http://www.twitter.com/envymikey/" />
+	<meta name="twitter:site" value="@envymikey" />
 	<meta property="og:locality" content="Fort Lauderdale" />
 	<link rel="shortcut icon" href="favicon.ico">
 
@@ -45,17 +44,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="brand" href="#Home"><img src="images/codeforftllogo.png"/> </a>
+      <a class="brand" href="#Home"><img src=""/> </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id ="dropit">
       <ul class="nav navbar-nav">
-        <li><a href="#Events" data-target="events.html">Events</a></li>
-        <li><a href="#Projects" data-target="projects.html" >Projects</a></li>
-        <li><a href="#Contact" data-target="contact.html" >Contact</a></li>
-        <li><a href="#Slack" data-target="slack.html" ><img src="images/slack.png" ></a></li>
-        <li><a href="#Github" data-target="Github.html"><img src="images/GitHub_Logo.png"  ></a></li>
       </ul>
     
     </div><!-- /.navbar-collapse -->
