--- a/public/home.html
+++ b/public/home.html
@@ -1,4 +1,5 @@
-<div class="container" >
+<div class="container homebg" >
    <h1 class="display"></h1>
-  <p class="lead"> Mostly work in php/mysql/javascript/jquery with frameworks such as Wordpress and Drupal. Enjoy a challenge. I have skills that range from C#, Java, Rust, Python, Erlang, and others. Docker / Linux is my enviroment and Kubernetes I am in the process of learning. 
-  </p></div>
+  <p class="lead">Working in a variety of technology. Php/Mysql, C#, Java, Rust, Python, Javascript, Docker/Linux and more.
+    <br> <a href = "https://github.com/protomikex/github.io">This site entirely custom built in Javascript/Jquery/Html/Css.
+  </a></p></div>
