--- a/public/home.html
+++ b/public/home.html
@@ -1,5 +1,5 @@
 <div class="container homebg" >
    <h1 class="display"></h1>
-  <p class="lead">Working in a variety of Langauges. Php/Mysql, C#, Java, Rust, Python, Javascript, Docker/Linux and more.
+  <p class="lead">Working in a variety of Languages. Php, C#, Java, Rust, Python, Javascript, Docker/Linux and more.
     <br> <a href = "https://github.com/protomikex/protomikex.github.io">This site entirely custom built in Javascript / Jquery / Html / Css.
   </a></p></div>
