--- a/public/resume.html
+++ b/public/resume.html
@@ -1,11 +1,5 @@
 <div class="container">
-<p><span>Michael Adler<br>
-2915 N 34 Terrace<br>
-Hollywood, FL 33021<br>
-(954)-881-3571<br>
-michaeladlerwork@gmail.com<br>
-Github : github.com/protomikex<br>
-</span></p>
+<p><span>Michael Adler</p>
 <p><span>Skills:<br>
 Worked in a variety of languages. C#, intermediate Java, Python, PHP, Javascript, and intermediate Erlang and Rust functional programming skills.  Html / Css (includes frameworks like Bootstrap and Susy) or hand code. Frameworks: Minimal frameworks with Python (Falcon/Mako),  Java(Spark) Javascript(React/ basic understanding Angular 1-2 skills (Typescript) , jQuery, Gulp), Node. Interacting with rest apis. 
 Always learning new skills and troubleshooting. Enjoy switching languages to work on multiple projects at a time. 
