--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id ="dropit">
       <ul class="nav navbar-nav"> 
-        <li><a class="nav-link" data-target="resume.html" href="#RESUME">Resume</a></li>
+        <!--<li><a class="nav-link" data-target="resume.html" href="#RESUME">Resume</a></li>-->
       
      
 
